--- a/index.html
+++ b/index.html
@@ -171,6 +171,18 @@
 
 	   </script>
 	   <link rel="stylesheet" media="screen" href="css/style.css" />    
+	       <!-- Hotjar Tracking Code for http://spleen.noo.name -->
+    <script>
+        (function(h,o,t,j,a,r){
+            h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+            h._hjSettings={hjid:140549,hjsv:5};
+            a=o.getElementsByTagName('head')[0];
+            r=o.createElement('script');r.async=1;
+            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+            a.appendChild(r);
+        })(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
+    </script>
+
 </head>
 
 <body oncontextmenu="return false">
