--- a/glsl-shader-pbr.html
+++ b/glsl-shader-pbr.html
@@ -10,26 +10,26 @@
     <meta name="keywords" content="interactive, escher, droste, glsl, shader, pbr, Physically Base Rendering">
 
     <!-- g+ -->
-    <meta itemprop="name" content="Escher-Droste GLSL Shader - PBR (Physically Base Rendering) shading">
+    <meta itemprop="name" content="Escher-Droste GLSL Shader - PBR (Physically Based Rendering) shading">
     <meta itemprop="description" content="WebGL demo. GLSL custom shader, PBR(Physically Base Rendering) for specular lighting, Oren-Nayar reflectance model for diffuse lighting. Needs a WebGL capable browser (ie11+/latest safari/chrome/firefox).">
     <meta itemprop="image" content="https://dl.dropboxusercontent.com/u/1358781/lab/webgl/escher-droste/preview-512x512.jpg"/>
 
     <!-- Open Graph data -->
-    <meta property="og:title" content="Escher-Droste GLSL Shader - PBR (Physically Base Rendering) hading" />
+    <meta property="og:title" content="Escher-Droste GLSL Shader - PBR (Physically Based Rendering) hading" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="http://spleen.noo.name/lab/webgl/escher-droste/index.html" />
     <meta property="og:image" content="https://dl.dropboxusercontent.com/u/1358781/lab/webgl/escher-droste/preview-512x512.jpg" />
-    <meta property="og:description" content="WebGL demo. GLSL custom shader, PBR(Physically Base Rendering) for specular lighting, Oren-Nayar reflectance model for diffuse lighting. Needs a WebGL capable browser (ie11+/latest safari/chrome/firefox)." />
+    <meta property="og:description" content="WebGL demo. GLSL custom shader, PBR(Physically Based Rendering) for specular lighting, Oren-Nayar reflectance model for diffuse lighting. Needs a WebGL capable browser (ie11+/latest safari/chrome/firefox)." />
     <meta property="og:site_name" content="spleen.noo.name" />
 
-    <title>Escher-Droste GLSL Shader - PBR (Physically Base Rendering) shading, GGX Distribution</title>
+    <title>Escher-Droste GLSL Shader - PBR (Physically Based Rendering) shading, GGX Distribution</title>
     <link rel="stylesheet" type="text/css" href="css/style.css" />  
   
 </head>
 <body>
     <div class="what">
         <h1>Escher-Droste GLSL Shader<br/></h1>
-        <h2>PBR (Physically Based Rendering) shading<br/>GGX Distribution<br/>NURBS surface</h2>
+        <h2>PBR (Physically Based Rendering) shading<br/>GGX Distribution<br/></h2>
     </div>
     <div id="webgl-demo"></div>
     <!--<script src="https://code.jquery.com/pep/0.4.1/pep.js"></script> -->
@@ -38,10 +38,12 @@
     <script src='js/detector.js'></script>
     <script src='js/raf.js'></script>
     <script src='js/rStats.js'></script>
+
     <!--<script src='js/verb/verb.js'></script> --> 
     <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/r73/three.min.js'></script>   
     <!--<script src='js/verb/verbToThreeConversion.js'></script>
     <script src="js/threeBasic.js"></script> -->  
+
     <script src='js/three/controls/OrbitControls.js'></script>
     <script src='js/three/shaders/FilmShader.js'></script>
     <script src='js/three/shaders/CopyShader.js'></script>   
