--- a/glsl-shader-pbr.html
+++ b/glsl-shader-pbr.html
@@ -17,7 +17,7 @@
     <!-- Open Graph data -->
     <meta property="og:title" content="Escher-Droste GLSL Shader - PBR (Physically Based Rendering) hading" />
     <meta property="og:type" content="article" />
-    <meta property="og:url" content="http://spleen.noo.name/lab/webgl/escher-droste/index.html" />
+    <meta property="og:url" content="http://spleennooname.github.io/escher-droste-three/glsl-shader-pbr.html" />
     <meta property="og:image" content="https://dl.dropboxusercontent.com/u/1358781/lab/webgl/escher-droste/preview-640x640.png" />
     <meta property="og:description" content="WebGL demo. GLSL custom shader, PBR (Physically Based Rendering) shading, GGX Distribution. Needs a WebGL capable browser (ie11+/latest safari/chrome/firefox)." />
     <meta property="og:site_name" content="spleen.noo.name" />
