--- a/glsl-shader-pbr.html
+++ b/glsl-shader-pbr.html
@@ -15,7 +15,7 @@
     <meta itemprop="image" content="https://dl.dropboxusercontent.com/u/1358781/lab/webgl/escher-droste/preview-640x640.png"/>
 
     <!-- Open Graph data -->
-    <meta property="og:title" content="Escher-Droste GLSL Shader - PBR (Physically Based Rendering) hading" />
+    <meta property="og:title" content="Escher-Droste GLSL Shader - PBR (Physically Based Rendering) shading" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="http://spleennooname.github.io/escher-droste-three/glsl-shader-pbr.html" />
     <meta property="og:image" content="https://dl.dropboxusercontent.com/u/1358781/lab/webgl/escher-droste/preview-640x640.png" />
