credits artwork + hide dir.light helper

--- a/glsl-shader-pbr-nurbs.html
+++ b/glsl-shader-pbr-nurbs.html
@@ -22,14 +22,14 @@
     <meta property="og:description" content="WebGL demo. GLSL custom shader, PBR (Physically Based Rendering) shading, GGX Distribution. Needs a WebGL capable browser (ie11+/latest safari/chrome/firefox)." />
     <meta property="og:site_name" content="spleen.noo.name" />
 
-    <title>Escher-Droste GLSL Shader - PBR (Physically Based Rendering) shading, GGX Distribution</title>
+    <title>Escher-Droste GLSL Shader - PBR (Physically Based Rendering) shading, GGX Distribution, NURBS surface</title>
     <link rel="stylesheet" type="text/css" href="css/style.css" />  
   
 </head>
 <body>
     <div class="what">
         <h1>Escher-Droste GLSL Shader<br/></h1>
-        <h2>PBR (Physically Based Rendering) shading<br/>GGX Distribution<br/>NURBS surface<br/></h2>
+        <h2>PBR (Physically Based Rendering) shading<br/>GGX Distribution<br/>NURBS surface<br/><br/>artwork credits: <a href="http://alexgrey.com/media/writing/art-psalms/let-love-draw-the-line/">Alex grey</a></h2>
     </div>
     <div id="webgl-demo"></div>
 
