add suffix -sphere html

--- a/glsl-shader-pbr.html
+++ b/glsl-shader-pbr.html
@@ -51,7 +51,7 @@
     <script src='js/three/postprocessing/ShaderPass.js'></script>
     <script src='js/three/postprocessing/MaskPass.js'></script> 
     <script src='js/three/postprocessing/RenderPass.js'></script> 
-    <script src='js/escher-droste--pbr.js'></script>
+    <script src='js/escher-droste--pbr-sphere.js'></script>
 
     <script src="http://cdn.webglstats.com/stat.js" defer="defer" async="async"></script>
 </body>
