--- a/glsl-shader-pbr-nurbs.html
+++ b/glsl-shader-pbr-nurbs.html
@@ -29,31 +29,12 @@
 <body>
     <div class="what">
         <h1>Escher-Droste GLSL Shader<br/></h1>
-        <h2>PBR (Physically Based Rendering) shading<br/>GGX Distribution<br/>NURBS surface<br/><br/>artwork credits: <a href="http://alexgrey.com/media/writing/art-psalms/let-love-draw-the-line/">Alex grey</a></h2>
+        <h2>PBR (Physically Based Rendering) shading<br/>
+            GGX Distribution<br/>NURBS surface<br/><br/>
+            artwork credits: <a href="http://alexgrey.com/media/writing/art-psalms/let-love-draw-the-line/">Alex grey</a></h2>
     </div>
     <div id="webgl-demo"></div>
-
-    <!--<script src="https://code.jquery.com/pep/0.4.1/pep.js"></script> -->    
-    <script src='js/dat.gui.min.js'></script>
-    <script src='js/Tween.js'></script>
-    <script src='js/detector.js'></script>
-    <script src='js/raf.js'></script>
-    <script src='js/rStats.js'></script>
- 
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/r73/three.min.js'></script>   
-    <script src='js/three/curves/NURBSCurve.js'></script>
-    <script src='js/three/curves/NURBSSurface.js'></script>
-    <script src='js/three/curves/NURBSUtils.js'></script>
-
-    <script src='js/three/controls/OrbitControls.js'></script>
-    <script src='js/three/shaders/FilmShader.js'></script>
-    <script src='js/three/shaders/CopyShader.js'></script>   
-    <script src='js/three/postprocessing/EffectComposer.js'></script>
-    <script src='js/three/postprocessing/ShaderPass.js'></script>
-    <script src='js/three/postprocessing/MaskPass.js'></script> 
-    <script src='js/three/postprocessing/RenderPass.js'></script> 
-    <script src='js/escher-droste--nurbs.js'></script>
-
+    <script data-main="src/js/demo2" src="src/js/lib/require/require.min.js"></script>
     <script src="http://cdn.webglstats.com/stat.js" defer="defer" async="async"></script>
 </body>
 </html>
