--- a/glsl-shader-pbr.html
+++ b/glsl-shader-pbr.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
-    
+<head>    
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="cleartype" content="on">
@@ -23,31 +22,20 @@
     <meta property="og:site_name" content="spleen.noo.name" />
 
     <title>Escher-Droste GLSL Shader - PBR (Physically Based Rendering) shading, GGX Distribution</title>
+
     <link rel="stylesheet" type="text/css" href="css/style.css" />  
   
 </head>
 <body>
     <div class="what">
         <h1>Escher-Droste GLSL Shader<br/></h1>
-        <h2>PBR (Physically Based Rendering) shading<br/>GGX Distribution<br/></h2>
+        <h2>PBR (Physically Based Rendering) shading<br/>
+            GGX Distribution<br/><br/>
+            artwork credits: <a href="http://alexgrey.com/media/writing/art-psalms/let-love-draw-the-line/">Alex grey</a>
+    </h2>
     </div>
     <div id="webgl-demo"></div>
-    <!--<script src="https://code.jquery.com/pep/0.4.1/pep.js"></script> -->
-    <script src='js/dat.gui.min.js'></script>
-    <script src='js/Tween.js'></script>
-    <script src='js/detector.js'></script>
-    <script src='js/raf.js'></script>
-    <script src='js/rStats.js'></script> 
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/r73/three.min.js'></script>   
-    <script src='js/three/controls/OrbitControls.js'></script>
-    <script src='js/three/shaders/FilmShader.js'></script>
-    <script src='js/three/shaders/CopyShader.js'></script>   
-    <script src='js/three/postprocessing/EffectComposer.js'></script>
-    <script src='js/three/postprocessing/ShaderPass.js'></script>
-    <script src='js/three/postprocessing/MaskPass.js'></script> 
-    <script src='js/three/postprocessing/RenderPass.js'></script> 
-    <script src='js/escher-droste--pbr-sphere.js'></script>
-
+    <script data-main="src/js/demo1" src="src/js/lib/require/require.min.js"></script>
     <script src="http://cdn.webglstats.com/stat.js" defer="defer" async="async"></script>
 </body>
 </html>
