moving assets from dropbpox

--- a/glsl-shader-pbr-nurbs.html
+++ b/glsl-shader-pbr-nurbs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    
+
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="cleartype" content="on">
@@ -12,19 +12,19 @@
     <!-- g+ -->
     <meta itemprop="name" content="Escher-Droste GLSL Shader - PBR (Physically Based Rendering) shading">
     <meta itemprop="description" content="WebGL demo. GLSL custom shader, PBR (Physically Based Rendering) shading, GGX Distribution. Needs a WebGL capable browser (ie11+/latest safari/chrome/firefox).">
-    <meta itemprop="image" content="https://dl.dropboxusercontent.com/u/1358781/lab/webgl/escher-droste/preview-640x640.png"/>
+    <meta itemprop="image" content="http://spleennooname.github.io/escher-droste-three/assets/preview-640x640.png"/>
 
     <!-- Open Graph data -->
     <meta property="og:title" content="Escher-Droste GLSL Shader - PBR (Physically Based Rendering) shading" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="http://spleennooname.github.io/escher-droste-three/glsl-shader-pbr.html" />
-    <meta property="og:image" content="https://dl.dropboxusercontent.com/u/1358781/lab/webgl/escher-droste/preview-640x640.png" />
+    <meta property="og:image" content="http://spleennooname.github.io/escher-droste-three/assets/preview-640x640.png" />
     <meta property="og:description" content="WebGL demo. GLSL custom shader, PBR (Physically Based Rendering) shading, GGX Distribution. Needs a WebGL capable browser (ie11+/latest safari/chrome/firefox)." />
     <meta property="og:site_name" content="spleen.noo.name" />
 
     <title>Escher-Droste GLSL Shader - PBR (Physically Based Rendering) shading, GGX Distribution, NURBS surface</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css" />  
-  
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+
 </head>
 <body>
     <div class="what">
